--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "vjtech-labs-cart",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
@@ -21,8 +21,12 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "file-saver": "^1.3.3",
+    "jquery": "^3.2.1",
     "rxjs": "^5.4.1",
+    "sinon": "^3.2.1",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
